EAEC-52: Fix animation loading and scroll to explore position on smaller viewports

--- a/styles/components/_header-2036.scss
+++ b/styles/components/_header-2036.scss
@@ -1,15 +1,15 @@
 @keyframes flash {
   0% {
-    opacity: 0;
+    opacity: 0; outline: 1px solid red
   }
   100% {
-    opacity: 1;
+    opacity: 1; outline: 1px solid red
   }
 }
 
 @keyframes fadeIn {
-  0% {opacity:0;}
-  100% {opacity:1;}
+  0% {opacity:0; outline: 1px solid green}
+  100% {opacity:1; outline: 1px solid green}
 }
 
 
