--- a/styles/components/_header-top.scss
+++ b/styles/components/_header-top.scss
@@ -126,7 +126,6 @@
     }
 
     @media (max-height: $round-image-vertical-breakpoint-sm) {
-      bottom: -120px;
       .btn {
         font-size: $font-size-tiny;
       }
@@ -309,6 +308,12 @@
     .subtitle {
       @media (max-width: map-get($grid-breakpoints, 'sm')) and (max-height: $round-image-vertical-breakpoint-sm) {
         font-size: $font-size-base
+      }
+    }
+
+    .actions {
+      @media (max-height: $round-image-vertical-breakpoint-sm) {
+        bottom: -120px;
       }
     }
   }
